# foxxgent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.remote  README.md  SECURITY.md  agent_brain.py  app_registry.py  connection_manager.py  database.py  docker-compose.git.yml  docker-compose.yml  exec_tools.py  install-bootstrap.sh  install.sh  main.py  mcp_client.py  omni_connector.py  proactive_scheduler.py  pyproject.toml  requirements.txt  runfoxx.sh
static/css/: style.css
static/js/: app.js
templates/: index.html
