[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxxgent"
version = "0.1.0"
description = "FoxxGent is an AI agent that lets you manage your server through a friendly chat interface (Web UI or Telegram). It combines autonomous AI reasoning with system administration capabilities."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FoxxGent Team"}
]
urls = {
    homepage = "https://github.com/foxxgent/foxxgent",
    repository = "https://github.com/foxxgent/foxxgent"
}

dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.3",
    "aiosignal>=1.4.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "attrs>=25.4.0",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.68",
    "botocore>=1.42.68",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.6",
    "click>=8.3.1",
    "croniter>=6.2.2",
    "cryptography>=46.0.5",
    "distro>=1.9.0",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "frozenlist>=1.8.0",
    "google-api-core>=2.30.0",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.1",
    "google-auth-httplib2>=0.3.0",
    "googleapis-common-protos>=1.73.0",
    "greenlet>=3.3.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httplib2>=0.31.2",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "idna>=3.11",
    "Jinja2>=3.1.6",
    "jiter>=0.13.0",
    "jmespath>=1.1.0",
    "MarkupSafe>=3.0.3",
    "multidict>=6.7.1",
    "openai>=2.28.0",
    "propcache>=0.4.1",
    "proto-plus>=1.27.1",
    "protobuf>=6.33.5",
    "psutil>=7.2.2",
    "pyasn1>=0.6.2",
    "pyasn1-modules>=0.4.2",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pyparsing>=3.3.2",
    "python-crontab>=3.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "python-telegram-bot>=22.6",
    "PyYAML>=6.0.3",
    "requests>=2.32.5",
    "s3transfer>=0.16.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.8.3",
    "SQLAlchemy>=2.0.48",
    "starlette>=0.52.1",
    "tqdm>=4.67.3",
    "typing-inspection>=0.4.2",
    "typing-extensions>=4.15.0",
    "uritemplate>=4.2.0",
    "urllib3>=2.6.3",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
    "yarl>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.classifiers]
"Development Status :: 3 - Alpha" = "Development Status :: 3 - Alpha"
"Intended Audience :: Developers" = "Intended Audience :: Developers"
"License :: OSI Approved :: MIT License" = "License :: OSI Approved :: MIT License"
"Programming Language :: Python :: 3" = "Programming Language :: Python :: 3"
"Programming Language :: Python :: 3.10" = "Programming Language :: Python :: 3.10"
"Programming Language :: Python :: 3.11" = "Programming Language :: Python :: 3.11"
"Programming Language :: Python :: 3.12" = "Programming Language :: Python :: 3.12"
"Programming Language :: Python :: 3.13" = "Programming Language :: Python :: 3.13"
"Programming Language :: Python :: 3.14" = "Programming Language :: Python :: 3.14"
